# solana-multisig

./: README.md  bash.sh  create_multisig.sh  find_pdas.js  package-lock.json  package.json
anchor/: Anchor.toml
anchor/programs/multisig/: Cargo.toml
anchor/programs/multisig/src/: lib.rs
anchor/src/: multisig-exports.ts
anchor/tests/: multisig.test.ts
src/app/: layout.tsx
src/app/multisig/: page.tsx
src/components/: app-header.tsx
src/components/multisig/: multisig-data-access.tsx  multisig-feature.tsx  multisig-ui.tsx
src/components/solana/: solana-provider.tsx
